<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24"
            app:showAsAction="never"/>
        <item
            android:id="@+id/select_plan"
            android:title="@string/select_plan"
            android:icon="@drawable/baseline_local_phone_24"
            app:showAsAction="never"/>
        <item
            android:id="@+id/create_plan"
            android:title="@string/create_plan"
            android:icon="@drawable/baseline_image_24"
            app:showAsAction="never"/>
        <item
            android:id="@+id/analysis"
            android:title="@string/analysis"
            android:icon="@drawable/baseline_image_24"
            app:showAsAction="never"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/baseline_image_24"
            app:showAsAction="never"/>
        <item
            android:id="@+id/help"
            android:title="@string/help"
            android:icon="@drawable/baseline_image_24"
            app:showAsAction="never"/>
        <item
            android:id="@+id/sign_out"
            android:title="@string/sign_out"
            android:icon="@drawable/baseline_image_24"
            app:showAsAction="never"/>

    </group>

</menu>

